--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,6 +211,8 @@ p {
     margin-bottom: 40px;
     border-bottom: 1px solid var(--border-color);
     padding-bottom: 20px;
+    flex-direction: column;
+    align-items: start;
 }
 
 .post-meta {
